--- a/teachersite/_includes/header.html
+++ b/teachersite/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="site-header" role="banner">
+<header>
   <a href='/'>
     <svg><use xlink:href="#icon-cs50-wordmark"></use></svg>
   </a>
