--- a/teachersite/_includes/home-page.html
+++ b/teachersite/_includes/home-page.html
@@ -1,29 +1,11 @@
 <home-page>
     <feed->
-        <post- class="cover harvard">
-            <h1>Looking for CS50.me?</h1>
-            <p><a href="https://cs50.me">cs50.me</a>!</p>
-        </post->
-        <post- class="cover harvard">
-            <h1>Looking for study help?</h1>
-            <p><a href="https://cs50.harvard.edu/2017/spring/e50">CSCI E-50</a><a href="https://cs50.harvard.edu/2017/spring/e50b">CSCI E-50b</a></p>
-        </post->
-        <post- class="cover harvard">
-            <h1>Looking for CS50 for MBAs?</h1>
-            <p>See <a href="https://cs50.github.io/hbs">cs50.github.io/hbs</a>!</p>
-        </post->
-        <post- class="cover harvard">
-            <h1>Like to CA or TF?</h1>
-            <p>We're currently reviewing applications from CS50's first wave of recruiting. But you can still apply for these and other roles at <a href="/apply">cs50.harvard.edu/apply</a> by Sun 3/26!</p>
-        </post->
-        <post- class="cover yale">
-            <h1>Considering CS50 for Fall 2017?</h1>
-            <p>See <a href="/faqs">cs50.yale.edu/faqs</a> to learn more!</p>
-        </post->
-        <post- class="cover yale">
-            <h1>The Unofficial Guide to CS at Yale</h1>
-            <p>See <a href="/guide">cs50.yale.edu/guide</a>!</p>
-        </post->
+        {% for announcement in site.data.announcements %}
+            <post- class="cover">
+                <h1>{{announcement.title}}</h1>
+                <p><a href="{{ announcement.link }}">{{announcement.linktitle}}</a></p>
+            </post->
+        {% endfor %}
         <post- class="video">
             <svg viewBox="0 0 21 9"></svg>
             <a href="https://www.youtube.com/embed/LO26ThcsvF0?autoplay=1&rel=0">
