--- a/teachersite/assets/main.scss
+++ b/teachersite/assets/main.scss
@@ -2,10 +2,10 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@import "minima";
+@import "_sass/_minima";
 
-@import 'sidebar';
-@import 'home';
+@import '_sass/_sidebar';
+@import '_sass/_home';
 
 
 * {
