--- a/teachersite/_sass/minima.scss
+++ b/teachersite/_sass/minima.scss
@@ -45,5 +45,7 @@ $on-laptop:        800px !default;
 @import
   "minima/base",
   "minima/layout",
-  "minima/syntax-highlighting"
+  "minima/syntax-highlighting",
+  "minima/home.scss",
+  "minima/sidebar.scss"
 ;
