--- a/teachersite/assets/main.scss
+++ b/teachersite/assets/main.scss
@@ -2,10 +2,7 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@import "_sass/_minima";
-
-@import '_sass/_sidebar';
-@import '_sass/_home';
+@import "minima";
 
 
 * {
